# server

./: .gitignore  server.cabal  stack.yaml
postgres/: create_tables.sql
src/: Main.hs  QRCode.hs  Types.hs
