name:          server
version:       0.0.0
cabal-version: >= 1.8
build-type:    Simple

executable          server
    main-is:        Main.hs
    other-modules:  QRCode
    ghc-options:    -Wall -threaded -O2 -rtsopts -with-rtsopts=-N
    extensions:     OverloadedStrings
    build-depends:  base   >= 4      && < 5
                  , scotty >= 0.10.0 && < 0.11
                  , scotty-tls >= 0.4.1 && < 0.5
                  , qrcode >= 0.1.2 && < 0.2.0
                  , array
                  -- , split
                  , JuicyPixels >= 3.2.7 && < 3.3.0
                  -- , opaleye
                  , transformers >= 0.4.2 && < 0.4.3
    hs-source-dirs: src
