name:          server
version:       0.0.0
cabal-version: >= 1.8
build-type:    Simple

executable          server
    main-is:        Main.hs
    other-modules:  QRCode
                  , Types
    ghc-options:    -Wall -threaded -O2 -rtsopts -with-rtsopts=-N
    extensions:     OverloadedStrings
    build-depends:  base   >= 4      && < 5
                  , scotty >= 0.10.0 && < 0.11
                  , scotty-tls >= 0.4.1 && < 0.5
                  , qrcode >= 0.1.2 && < 0.2.0
                  , array
                  -- , split
                  , JuicyPixels >= 3.2.7 && < 3.3.0
                  , opaleye >= 0.5.1.1 && < 0.5.2
                  , transformers >= 0.4.2 && < 0.4.3
                  , product-profunctors >= 0.6.3 && < 0.6.4
                  , iproute >= 1.7 && < 1.8
                  , time >= 1.5 && < 1.6
                  , uuid >= 1.3 && < 1.4
                  , postgresql-simple >= 0.5.1 && < 0.5.2
                  , bytestring >= 0.10.6 && < 0.10.7
                  , aeson
                  , uuid-aeson
                  , text >= 1.2.2 && < 1.2.3
    hs-source-dirs: src
